less.lang: Fix :extend() not highlighted inside rulesets
Highlighting for extends inside rulesets (&:extend(...)) was left out /
broken in b0042e4aeb21362abe3a8908b3226833f41fa8d5.

--- a/tests/syntax-highlighting/file.less
+++ b/tests/syntax-highlighting/file.less
@@ -229,7 +229,8 @@ body {
 
 // attached to selector
 #main:extend(.card-style),
-.sidebar :extend(div pre) {
+.sidebar :extend(div pre),
+:not(:extend(#footer)) { /* not allowed as argument to :not() */
     color: blue;
 }
 
